Added cart option

--- a/AspStore/Areas/Admin/Views/Brand/Edit.cshtml
+++ b/AspStore/Areas/Admin/Views/Brand/Edit.cshtml
@@ -1,17 +1,17 @@
-﻿@model AspStore.Models.ViewModel.BrandViewModel
+﻿@model AspStore.Models.ViewModel.BrandEditViewModel
 
 @{
     ViewData["Title"] = "Create";
 }
 
-<h1>Edit</h1>
+<h1>Create</h1>
 
 <h4>Brand</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create" enctype="multipart/form-data">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <form method="post" enctype="multipart/form-data">
+            <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -43,9 +43,15 @@
                 <span asp-validation-for="SupportEmail" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Update" class="btn btn-primary" />
             </div>
         </form>
+    </div>
+    <div class="col-md-4">
+        <figure>
+            <img src="@Model.ExistingLogo" height="100"/>
+            <figcaption>Current Logo</figcaption>
+        </figure>
     </div>
 </div>
 
